WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51926
[GStreamer] MediaPlayerPrivateGStreamer::totalBytes() does not work reliably
https://bugs.webkit.org/show_bug.cgi?id=51926
Summary
[GStreamer] MediaPlayerPrivateGStreamer::totalBytes() does not work reliably
Simon Hausmann
Reported
2011-01-05 06:51:51 PST
When used with the WebKitWebSrc, the query for the duration in bytes does not work. This is potentially an upstream bug, see
https://bugzilla.gnome.org/show_bug.cgi?id=638749
It would be nice to work around this "limitation" in GstBin.
Attachments
Patch
(2.93 KB, patch)
2011-01-05 07:37 PST
,
Simon Hausmann
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2011-01-05 07:37:17 PST
Created
attachment 78005
[details]
Patch
Simon Hausmann
Comment 2
2011-01-05 08:05:31 PST
Committed
r75065
: <
http://trac.webkit.org/changeset/75065
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug